龙腾提交1次

--- a/css/LTsuccess.css
+++ b/css/LTsuccess.css
@@ -27,7 +27,7 @@
 }
 .TLindustry .TLind p:hover .ele{
     color: #DA1D35 ;
-    /* text-decoration:underline; */
+    /* text-decoration:underline; 123 */
 }
 .TLindustry .TLind:hover .TLlist{
     display: block;
