--- a/css/ZP-investor-contact.css
+++ b/css/ZP-investor-contact.css
@@ -21,36 +21,34 @@
     border-right: 0!important;
 }
 
-/* 内容区域开始 */
-
+/* 内容区域 */
 .tab_content {
     margin: 60px 126px;
-}
-.tab_content p {
-    display: block;
-    height: 25px;
-    line-height: 25px;
-    padding: 5 0px;
 }
 .tab_content h1{
     font-size: 36px;
     text-align: center;
     margin: 20px 0px;
 }
-.tab_content_p {
+
+/* 主题内容 部分 */
+
+.subject {
     font-size: 13.5px;
-    padding-bottom: 100px;
+    margin: 0 130px;
+    margin-top: 50px;
+    margin-bottom: 60px;
 }
-.tab_content_p span {
-    line-height: 1.5em;
-    padding: 2px 0;
+.subject p {
+    display: block;
+    margin: 10px 0;
 }
-
-/* 内容区域调用的类名 */
-
-.font_red {
-    color: #DC1E32;
+.envelope {
+    margin-bottom: 80px;
 }
-.font_weight {
-    font-weight: 700;
+.xiahuaxian {
+    text-decoration: underline;
+}
+.red {
+    color: red;
 }
