范豪修改了自己页面BUG

--- a/css/FH-Storage.css
+++ b/css/FH-Storage.css
@@ -241,3 +241,9 @@
     /* background: url('../images/smallBanner-icon-red.png') no-repeat 17px -183px; */
     background: url(../images/smallBanner-icon.png) no-repeat 17px -183px #dc1e32;
 }
+
+.absoluteness {
+    display: block;
+    position: absolute;
+    top: 3px;
+}
