--- a/css/dlindex.css
+++ b/css/dlindex.css
@@ -103,6 +103,66 @@
 .banner .banner_splot .banner_splot_curr{
     background-color: #dc1e32;
 }
+/* 温馨提醒 */
+.banner .warm_tips {
+    position: absolute;
+    /* right: 0; */
+    right: -180px;
+    top: 30%;
+    height: 84px;
+}
+.banner .warm_tips .warm_tips_img{
+    float: left;
+    width: 60px;
+    height: 100%;
+    background: #dc1e32;
+    cursor: pointer;
+}
+.banner .warm_tips_img .img{
+    width: 100%;
+    height: 30px;
+    background: url(../images/warning_prompt_icon1.png) no-repeat center center;
+    margin-top: 7px;
+    border: none;
+    margin-bottom: 5px;
+}
+.banner .warm_tips_img p {
+    font-size: 14px;
+    line-height: 15px;
+    color: #fff;
+    text-align: center;
+    width: 50%;
+    margin: 0 auto;
+}
+.banner .warm_tips_tit{
+    float: left;
+    background-color: #fff;
+    height: 100%;
+    width: 177px;
+    padding: 10px 5px;
+    box-sizing: border-box;
+}
+.banner .warm_tips_tit a{
+    display: table-cell;
+    vertical-align: middle;
+    line-height: 18px;
+    font-size: 13px;
+    color: #dc1e32;
+}
+.banner .warm_tips_tit a:hover{
+  text-decoration: underline #dc1e32;
+}
+.banner .addvices {
+    top: 50%
+}
+.banner .addvices .img{
+    width: 100%;
+    height: 30px;
+    background: url(../images/warning_prompt_icon2.png) no-repeat center center;
+    margin-top: 7px;
+    border: none;
+    margin-bottom: 5px;
+}
 /* content开始 */
 .content {
     width: 100%;
@@ -116,11 +176,81 @@
     display: flex;
     justify-content:space-between;
 }
-.content .content_nav ul li{
+.content .content_nav ul>li{
     width: 20%;
     text-align: center;
     line-height: 98px;
 }
+.content .content_nav ul li:first-child{
+    position: relative;
+}
+
+.content .bill_number {
+    position: absolute;
+    z-index: 222;
+    bottom: 98px;
+    left: -23%;
+    width: 385px;
+    background-color: #ffffff;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    padding: 0 20px 0 0px;
+    box-sizing: border-box;
+}
+.content .bill_number .bill_search {
+    position: relative;
+    line-height: 0;
+    padding: 20px 20px 0 0;
+
+}
+.content .bill_number .search_icon {
+    position: absolute;
+    top: 20px;
+    right: 14px;
+    width: 41px;
+    height: 42px;
+    background: url(../images/smallHeader-searchIcon.png) no-repeat center -18px;
+    /* display: none; */
+    border: 1px solid #e1e1e0;
+    border-left: none;
+}
+.content .bill_number .bill_search input {
+    width: 280px;
+    line-height: 30px;
+    padding: 5px 10px;
+    border: 1px solid #E1E1E0;
+    box-shadow:inset 0px 0px 5px 1px #E1E1E0;
+}
+.content .bill_number .search_bill_number {
+    line-height: 30px;
+    width: 325px;
+    /* margin-top: 10px; */
+    padding: 5px 20px;
+    background-color: #DC1E32;
+    color: #ffffff;
+    border-radius: 5px;
+}
+.content .bill_number .bill_search_hidden {
+    display: none;
+    width: 280px;
+    font-size: 12px;
+    color: #999;
+    margin: 16px auto 0;
+    border: 1px solid #E1E1E0;
+    box-shadow: inset 0px 0px 5px 1px #E1E1E0;
+    box-sizing: border-box;
+} 
+.content .bill_number .bill_search_hidden textarea {
+    width: 100%;
+    min-height: 70px;
+    /* text-indent: 2rem; */
+    padding: 8px 0 0 10px;
+    box-sizing: border-box;
+    resize: none;
+    overflow: hidden;
+    color: #999;
+}
+
 .content .content_nav li a {
     display: flex;
     color: #fff;
@@ -240,8 +370,9 @@
 .content .content_banenr_img li{
     width: 49.5%;
 }
-.content .content_banenr_img li img {
+.content .content_banenr_img li .contimg {
     width: 100%;
+    height: 255px;
 }
 
 /* 物流和金融的轮播图结束 */
