--- a/css/dlindex.css
+++ b/css/dlindex.css
@@ -420,7 +420,7 @@
     justify-content: space-between;
 }
 .content .content_success .content_su_nav li {
-    width: 15.9%;
+    width: 172px;
     height: 172px;
     background-color: #ffffff;
     border-radius: 50%;
