--- a/css/ZP-investor-notice.css
+++ b/css/ZP-investor-notice.css
@@ -6,19 +6,17 @@
     padding: 0 160px;
     background-color: #F1F1F1;
     box-sizing: border-box;
-    overflow: hidden;
 }
-.tabs_nav_fa li {
+.tabs_nav_fa >ul>li {
+    background: url(../images/a_line.png) no-repeat right center;
+    font-size: 18px;
+    position: relative;
     float: left;
 }
-.tabs_nav_fa a {
-    font-size: 18px;
+.tabs_nav_fa >ul>li>a {
     font-weight: 700;
-    border-right: 1px solid #000;
-    padding: 0 76px;
-}
-.tabs_nav_fa_a{
-    border-right: 0!important;
+    margin: 0 76px;
+    padding-bottom: 3px;
 }
 
 /* 内容区域 */
