周鹏添加了轮播图(1/9)

--- a/css/ZP-Common.css
+++ b/css/ZP-Common.css
@@ -134,3 +134,15 @@
     white-space: nowrap;
     text-align: center;
 }
+
+
+/* 轮播图 */
+/* 小圆点当前原点颜色 */
+.swiper-pagination-bullet-active {
+    --swiper-theme-color: blue;
+}
+
+/* 翻页按钮 */
+#ccc {
+    color: #ccc;
+}
